2009-02-19  Sanel <karijes@users.sourceforge.net>

	* edelib/Resource.h:
	* src/Resource.cpp: s/find_dir/find_data and changed concept; it should
	seach through data directories and (now) will search anything, like
	directory, file, etc.
	* test/resource.cpp: updated tests
	* src/Resource.cpp: refactored load() function

2009-02-18  Sanel <karijes@users.sourceforge.net>

	* edelib/Resource.h:
	* src/Resource.cpp: added find_config() and find_dir() functions; they
	will search for paths in XDG dirs, according to given search order
	* test/resource.cpp: tests for find_config() and find_dir()

2009-01-24  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in: s/CFLAGS/CCFLAGS; jam uses CCFLAGS
	* Jamrules: fixed GenLa action so it leaves comments
	* Jamrules: small tweaks in SharedLibraryFromObjects rule
	* test/Jamfile: let xsettings.cpp receive flags too

2009-01-22  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* edelib/econfig.h: added HAVE_EDELIB_BASE_CONFIG_H so it can be included
	only when edelib gets compiled so symbols in edelib/_conf.h don't collide
	with ones in ede2 config.h or user one

2009-01-20  Sanel <karijes@users.sourceforge.net>

	* First edelib change in 2009 :)
	* src/Config.cpp: fixed issue due retrieving double and float
	numbers on different locales

2008-12-29  Sanel <karijes@users.sourceforge.net>

	* edelib/List.h: removing comb_sort(); completed specialization code, but
	not used yet; somehow it generates bigger code
	* test/list.cpp: added test for sorting pointers and exposed current bug
	in list::sort() method

2008-10-07  Sanel <karijes@users.sourceforge.net>

	* src/DateTime.cpp: remove assertions; besides they are unneeded,
	day_name() would assert if day was larger than 7 (bad, I know)

2008-10-06  Sanel <karijes@users.sourceforge.net>

	* edelib/econfig.h: seems that class visibility is working at gcc >= 4.0

2008-10-05  Sanel <karijes@users.sourceforge.net>
